(executable
 (name snoke)
 (public_name snoke)
 (libraries bogue))

(install
 (section share)
 (files
  "SnakeChan-MMoJ.ttf"
  ("images/apple.png" as "images/apple.png")
  ("images/banana.png" as "images/banana.png")
  ("images/bonus.png" as "images/bonus.png")
  ("images/grass3.png" as "images/grass3.png")
  ("images/snake-body-grey.png" as "images/snake-body-grey.png")
  ("images/snake-body.png" as "images/snake-body.png")
  ("images/snake-head-grey.png" as "images/snake-head-grey.png")
  ("images/snake-head.png" as "images/snake-head.png")
  ("images/snake-tail-grey.png" as "images/snake-tail-grey.png")
  ("images/snake-tail.png" as "images/snake-tail.png")
  ("images/snake-turn-neg-grey.png" as "images/snake-turn-neg-grey.png")
  ("images/snake-turn-neg.png" as "images/snake-turn-neg.png")
  ("images/snake-turn-pos-grey.png" as "images/snake-turn-pos-grey.png")
  ("images/snake-turn-pos.png" as "images/snake-turn-pos.png")
  ("images/snoke_title.png" as "images/snoke_title.png")
  ("sounds/completed.wav" as "sounds/completed.wav")
  ("sounds/crunch.wav" as "sounds/crunch.wav")
  ("sounds/do.wav" as "sounds/do.wav")
  ("sounds/fast.wav" as "sounds/fast.wav")
  ("sounds/fa.wav" as "sounds/fa.wav")
  ("sounds/great.wav" as "sounds/great.wav")
  ("sounds/new_level.wav" as "sounds/new_level.wav")
  ("sounds/oh_yeah.wav" as "sounds/oh_yeah.wav")
  ("sounds/over.wav" as "sounds/over.wav")
  ("sounds/re.wav" as "sounds/re.wav")
  ("sounds/sol.wav" as "sounds/sol.wav")))
